apply bug fixes for overflowing content

--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ td {
 }
 .forex {
   width: 90%;
-  height: 250px;
+  height: 300px;
   margin: 50px 0;
 }
 @media (max-width: 420px) {
